# bmo

./: .gitignore  Modelfile  README.md  start.bat  start.ps1
backend/: agent_loop.py  agent_test.py  config.py  llamacpp_bench.py  llamacpp_test.py  main.py  ollama_bench.py  piper-test.py  pyproject.toml  requirements.txt  tool_test.py
backend/agent/: conversation.py  events.py  loop.py  orchestrator.py
backend/routes/: static.py
backend/services/: llm.py  ollama.py  state.py  stt.py  tools.py  transcribe.py  tts.py
backend/ws/: chat.py
frontend/: index.html  style.css
frontend/js/: app.js  audio-player.js  chat-ws.js  llm-ready.js  recorder.js  render.js  state.js  ui.js  viseme.js  websocket.js
